--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,10 +1,15 @@
 <html>
+  <header></header>
+  <body id="body">
+    <div class="row">
+      <div id="upperHeaderArea">
+        <!-- <%= image_tag("ricefarm.jpg", class: "header") %> -->
+        <%= image_tag("riceLogo.jpg", id: "upperHeaderLogo") %>
+        <p id="riceHouseSign">RiceHouse</p>
+      </div>
+      <div id="lowerHeaderArea">
 
-  <div>
-    <div>
-      <%= image_tag("rice.jpg") %>
+      </div>
     </div>
-    Welcome man
-  </div>
-
+  </body>
 </html>
