--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -10,30 +10,37 @@
   background-color: #AAFF94;
   height: 80px;
   width: 100%;
-  overflow:auto;
+  overflow: hidden;
   border-bottom: 1px solid #FFFFFF;
+  margin-left: 15px;
 }
 
 #lowerHeaderArea {
   background-color: #AAFF94;
   height: 35px;
   width: 100%;
-  overflow:auto;
+  overflow: hidden;
+  margin-left: 15px;
 }
 
 #upperHeaderLogo {
   width: 40px;
   height: 40px;
   border-radius: 100%;
-  margin-left: 30px;
+  margin-left: 15px;
   margin-top: -9px;
   display: inline-block;
 }
 
 #riceHouseSign {
-  font-size: 30px;
+  font-size: 25px;
   font-family: Proxima Nova Soft, Helvetica Neue, sans-serif;
   color: #FFFFFF;
   display: inline-block;
   margin-top: 15px;
+}
+
+.navbarItem {
+  color: #FFFFFF;
+  background-color: inherit;
 }
