--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div>
 
   <div id="upperHeaderArea">
     <!-- <%= image_tag("ricefarm.jpg", class: "header") %> -->
@@ -9,10 +9,10 @@
   <nav id="lowerHeaderArea" class="navbar navbar-default">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <li class="navbarItem"><a href="#">Home</a></li>
-        <li class="navbarItem"><a href="#">Products</a></li>
-        <li class="navbarItem"><a href="#">About Us</a></li>
-        <li class="navbarItem"><a href="#">Contact Us</a></li>
+        <li class="navbarItem"><a href="/home">Home</a></li>
+        <li class="navbarItem"><a href="/products">Products</a></li>
+        <li class="navbarItem"><a href="/about_us">About Us</a></li>
+        <li class="navbarItem"><a href="/contact_us">Contact Us</a></li>
       </ul>
     </div>
   </nav>
