--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,45 +2,60 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#body {
-
+@mixin divResponsiveWidth {
+  width: 1000px;
+  @media (max-width: 992px) {
+    width: 700px;
+  }
 }
 
-#upperHeaderArea {
+.homeBody {
+  @include divResponsiveWidth;
+  height: 900px;
+  background-color: WHITE;
+  margin: auto;
+  margin-bottom: 20px;
+}
+
+@mixin stationaryImage {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  @include divResponsiveWidth;
+  height: 350px;
+}
+
+#varietyOfRice {
+  @include stationaryImage;
+  background-image: url('ricetypes.jpg');
+}
+
+#falvourOfRice {
   background-color: #AAFF94;
-  height: 80px;
-  width: 100%;
-  overflow: hidden;
-  border-bottom: 1px solid #FFFFFF;
-  margin-left: 15px;
+  @include divResponsiveWidth;
+  height: 200px;
 }
 
-#lowerHeaderArea {
-  background-color: #AAFF94;
-  height: 35px;
-  width: 100%;
-  overflow: hidden;
-  margin-left: 15px;
+#experiencedFarmers {
+  @include stationaryImage;
+  background-image: url('ricefarmer.jpg');
 }
 
-#upperHeaderLogo {
-  width: 40px;
-  height: 40px;
-  border-radius: 100%;
-  margin-left: 15px;
-  margin-top: -9px;
-  display: inline-block;
-}
-
-#riceHouseSign {
-  font-size: 25px;
+#textWithoutBackgroundImage {
+  font-size: 40px;
   font-family: Proxima Nova Soft, Helvetica Neue, sans-serif;
   color: #FFFFFF;
+  margin-top: 70px;
+  margin-left: 25px;
   display: inline-block;
-  margin-top: 15px;
 }
 
-.navbarItem {
-  color: #FFFFFF;
-  background-color: inherit;
+.textWithBackgroundImage {
+  font-size: 40px;
+  font-family: Proxima Nova Soft, Helvetica Neue, sans-serif;
+  color: #AAFF94;
+  margin-left: 25px;
+  margin-top: 145px;
+  display: inline-block;
 }
