Implemented the views for Contact us and about us pages

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,7 +9,7 @@
 
 #mainBody {
   background-image: url('terracedfarm.jpg');
-  background-size: contain;
+  background-size: cover;
 }
 
 #upperHeaderArea {
