--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,4 +1,4 @@
-<div class="homeBody">
+<div id="home_body">
 
   <div id="varietyOfRice">
     <p class="textWithBackgroundImage">You can taste the variety ...</p>
