Implemented Authentication part.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,6 +7,63 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+#userLogo {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  float: right;
+  display: inline-block;
+  margin-right: 39px;
+}
+
+#userSignIn {
+  width: 50px;
+  height: 22px;
+  display: inline-block;
+  float: right;
+  margin-right: 15px;
+  background-color: inherit;
+  margin-top: 15px;
+}
+
+#userSignIn a {
+  color: WHITE;
+}
+
+#userLogoDropdown {
+  display: inline-block;
+  margin-top: 15px;
+  margin-right: 10px;
+  float: right;
+  width: 118px;
+  height: 88px;
+}
+
+#options {
+  width: 118px;
+  background-color: #52A125;
+  height: 44px;
+  display: none;
+  border: 1px solid WHITE;
+}
+
+#options a {
+  border-bottom: 1px solid WHITE;
+  width: 118px;
+  height: 22px;
+  display: block;
+  color: WHITE;
+  margin: auto;
+}
+
+#options a:hover {
+  background-color: #36681A;
+}
+
+#userLogoDropdown:hover #options {
+  display: inline-block;
+}
+
 #mainBody {
   background-image: url('terracedfarm.jpg');
   background-size: cover;
@@ -16,7 +73,6 @@
   background-color: #AAFF94;
   height: 80px;
   width: 100%;
-  overflow: hidden;
   border-bottom: 1px solid #FFFFFF;
 }
 
@@ -24,7 +80,8 @@
   background-color: #AAFF94;
   height: 35px;
   width: 100%;
-  overflow: hidden;
+  position: inherit;
+  display: inherit;
 }
 
 #upperHeaderLogo {
