--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -1,3 +1,99 @@
 // Place all the styles related to the Product controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#products_page {
+  width: 80%;
+  margin: auto;
+}
+
+@keyframes product_shadow {
+    from  {box-shadow: 0px 0px 0px 0px BLACK;}
+    to {box-shadow: 5px 5px 5px 5px BLACK;}
+}
+
+.checked {
+    color: orange;
+}
+
+#product {
+  width: 225px;
+  height: 225px;
+  background-color: WHITE;
+  text-align: center;
+  margin: auto;
+  display: inline-block;
+  margin-right: 10px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+#new_botton {
+  width: 90px;
+  height: 25px;
+  border: 2px solid WHITE;
+  border-radius: 5px;
+  display: block;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+#new_botton a {
+  color: WHITE;
+  margin-top: 4px;
+}
+
+#new_botton a:hover {
+  color: BLACK;
+}
+
+#new_page {
+  height: 200px;
+  width: 300px;
+  margin: auto;
+  margin-bottom: 20px;
+  display: inline-block;
+  color: #3E882A;
+  background-color: WHITE;
+  text-align: center;
+}
+
+#product_avatar {
+  width: inherit;
+  height: 70%;
+  display: inline-block;
+  margin: auto;
+}
+
+#product p {
+  margin: auto;
+  display: block;
+}
+
+#product_botton {
+  width: 100px;
+  display: inline-block;
+  height: 20px;
+  border-radius: 5px;
+  background: #52A125;
+  margin: auto;
+}
+
+#product_botton a {
+  color: WHITE;
+}
+
+#product_botton:hover {
+  background: #36681A;
+}
+
+#product_price {
+  width: 49%;
+  display: inline-block;
+  text-align: center;
+}
+
+#product_rate {
+  width: 49%;
+  display: inline-block;
+}
