--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -28,7 +28,7 @@
            <li class="navbarItem"><a href="/user">Users</a></li>
          <% end %>
         <% end %>
-        <li class="navbarItem"><a href="/products">Products</a></li>
+        <li class="navbarItem"><a href="/product">Products</a></li>
         <li class="navbarItem"><a href="/about_us">About Us</a></li>
         <li class="navbarItem"><a href="/contact_us">Contact Us</a></li>
       </ul>
