--- a/app/views/product/_new.html.erb
+++ b/app/views/product/_new.html.erb
@@ -12,6 +12,11 @@
     </div>
 
     <div class="form-group">
+      <%= f.label :price %>
+      <%= f.number_field :price, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
       <%= f.label :avatar %>
       <%= f.file_field :avatar, class: 'form-control' %>
     </div>
