--- a/app/views/product/_new.html.erb
+++ b/app/views/product/_new.html.erb
@@ -1,28 +1,31 @@
 <div id="new_page">
-  <%= form_with scope: :product, url: '/product', local: true do |f| %>
+  <h5>Making New Product:</h5>
+  <div id="new_form">
+    <%= form_with scope: :product, url: '/product', local: true do |f| %>
 
-    <div class="form-group">
-      <%= f.label :title %>
-      <%= f.text_field :title, class: 'form-control' %>
-    </div>
+      <div class="form-group">
+        <%= f.label :title %>
+        <%= f.text_field :title, class: 'form-control', required: true %>
+      </div>
 
-    <div class="form-group">
-      <%= f.label :description %>
-      <%= f.text_area :description, class: 'form-control' %>
-    </div>
+      <div class="form-group">
+        <%= f.label :description %>
+        <%= f.text_area :description, class: 'form-control', required: true %>
+      </div>
 
-    <div class="form-group">
-      <%= f.label :price %>
-      <%= f.number_field :price, class: 'form-control' %>
-    </div>
+      <div class="form-group">
+        <%= f.label :price %>
+        <%= f.number_field :price, class: 'form-control', required: true, min: 0 %>
+      </div>
 
-    <div class="form-group">
-      <%= f.label :avatar %>
-      <%= f.file_field :avatar, class: 'form-control' %>
-    </div>
+      <div class="form-group">
+        <%= f.label :avatar %>
+        <%= f.file_field :avatar, class: 'form-control', required: true %>
+      </div>
 
-    <div class="form-group">
-      <%= f.submit 'Upload Photo', class: 'btn btn-default' %>
-    </div>
-  <% end %>
+      <div class="form-group">
+        <%= f.submit 'Create', class: 'btn btn-default' %>
+      </div>
+    <% end %>
+  </div>
 </div>
